fix: link buttons no longer grow too large

--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -197,3 +197,7 @@
     }
   }
 }
+
+a.pf-btn {
+  display: inline-flex;
+}
